[package]
name = "advent-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.11", features = ["macros"] }

[dev-dependencies]
criterion = "0.5.1"
paste = "1.0.14"

[[bench]]
name = "bench"
harness = false
